--- a/src/assets/Components/Pages/Busca/Busca.css
+++ b/src/assets/Components/Pages/Busca/Busca.css
@@ -36,7 +36,7 @@
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     background-color: rgba(255, 255, 255, 0.1);
-    background-image: url("icons/projeto.png");
+    background-image: url("https://img.freepik.com/fotos-gratis/conservacao-ambiental-no-jardim-para-criancas_1150-15276.jpg");
     overflow: hidden;
     justify-content: center;
     align-items: center;
@@ -60,7 +60,7 @@
 
 .container .card .content h3 {
     font-size: 1.8em;
-    color: #fff;
+    color: #1B4820;
     z-index: 1;
 }
 
@@ -98,7 +98,7 @@
     margin: 30px;
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
-    background-image: url("icons/fazemos.png");
+    background-image: url("https://services.meteored.com/img/article/dia-mundial-del-medio-ambiente-el-planeta-necesita-que-nos-convirtamos-en-la-generacion-restauracion-340781-1_768.jpeg");
     overflow: hidden;
     justify-content: center;
     align-items: center;
@@ -122,7 +122,7 @@
 
 .container2 .card2 .content h3 {
     font-size: 1.8em;
-    color: #fff;
+    color: #1B4820;
     z-index: 1;
 }
 
@@ -160,7 +160,7 @@
     margin: 30px;
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
-    background-image: url("icons/onde_estamos.png");
+    background-image: url("https://s3.amazonaws.com/mktzap-media-storage-master/web_chat/webchat/2700/2901497eae295d3ea9244c818e648fe617717daa");
     overflow: hidden;
     justify-content: center;
     align-items: center;
@@ -184,7 +184,7 @@
 
 .container3 .card3 .content h3 {
     font-size: 1.8em;
-    color: #fff;
+    color: #1B4820;
     z-index: 1;
 }
 
@@ -219,7 +219,7 @@
     margin: 30px;
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
-    background-image: url("icons/somos.png");
+    background-image: url("https://img.freepik.com/vetores-premium/icone-de-l…e-problema-em-estilo-comico_501069-300.jpg?w=2000");
     overflow: hidden;
     justify-content: center;
     align-items: center;
@@ -243,7 +243,7 @@
 
 .container4 .card4 .content h3 {
     font-size: 1.8em;
-    color: #fff;
+    color: #1B4820;
     z-index: 1;
 }
 
