--- a/src/assets/Components/Pages/Busca/Busca.css
+++ b/src/assets/Components/Pages/Busca/Busca.css
@@ -101,6 +101,7 @@
     background-image: url("https://services.meteored.com/img/article/dia-mundial-del-medio-ambiente-el-planeta-necesita-que-nos-convirtamos-en-la-generacion-restauracion-340781-1_768.jpeg");
     overflow: hidden;
     justify-content: center;
+    background-size: cover;
     align-items: center;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
     border-left: 1px solid rgba(255, 255, 255, 0.1);
@@ -162,6 +163,7 @@
     border-radius: 15px;
     background-image: url("https://s3.amazonaws.com/mktzap-media-storage-master/web_chat/webchat/2700/2901497eae295d3ea9244c818e648fe617717daa");
     overflow: hidden;
+    background-size: cover;
     justify-content: center;
     align-items: center;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
@@ -220,6 +222,7 @@
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     background-image: url("https://img.freepik.com/vetores-premium/icone-de-l…e-problema-em-estilo-comico_501069-300.jpg?w=2000");
+    background-size: cover;
     overflow: hidden;
     justify-content: center;
     align-items: center;
